# Tactility

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  CODING_STYLE_C.md  CODING_STYLE_CPP.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  THIRD-PARTY-NOTICES.md  app-flash_args  config.env  data-flash_args  device.py  devicetree.c  esp_idf_project_configuration.json  flash_args  flash_args.in  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  lv_conf.h  partitions-16mb-no-sd.csv  partitions-16mb.csv  partitions-32mb.csv  partitions-4mb-with-sd.csv  partitions-8mb-no-sd-dev.csv  partitions-8mb-no-sd.csv  partitions-8mb-with-sd.csv  partitions-8mb.csv  project_description.json  sdkconfig.md  session-ses_28c2.md  system-flash_args
Buildscripts/TactilitySDK/: CMakeLists.txt  TactilitySDK.cmake
Devices/lilygo-tlora-pager/: CMakeLists.txt  device.properties  devicetree.yaml  lilygo,tlora-pager.dts  lilygo,tlora-pager.yaml  lilygo,tlora_pager.dts
Devices/lilygo-tlora-pager/Source/: Configuration.cpp  Drivers.cpp  Init.cpp  module.cpp
Devices/lilygo-tlora-pager/source/: module.cpp
Devices/m5stack-tab5/: CMakeLists.txt  device.properties  devicetree.yaml  m5stack,tab5.dts
Devices/m5stack-tab5/Source/: Configuration.cpp  module.cpp
Devices/simulator/: CMakeLists.txt  device.properties  devicetree.yaml  simulator.dts
Devices/simulator/Source/: LvglTask.cpp  Main.cpp  Simulator.cpp  module.cpp
Devices/waveshare-s3-touch-amoled-18/: CMakeLists.txt  device.properties  devicetree.yaml  waveshare,s3-touch-amoled-206.dts
Devices/waveshare-s3-touch-amoled-18/Source/: Configuration.cpp  module.cpp
Devices/waveshare-s3-touch-amoled-206/: CMakeLists.txt  device.properties  devicetree.yaml  waveshare,s3-touch-amoled-206.dts
Devices/waveshare-s3-touch-amoled-206/Source/: Configuration.cpp
Drivers/PlatformEsp32/: CMakeLists.txt
Drivers/PlatformEsp32/Bindings/: espressif,esp32-i2c.yaml
Drivers/PlatformEsp32/Source/: Esp32Gpio.cpp  Esp32I2c.cpp
Drivers/drivers-abstract/: CMakeLists.txt
Drivers/drivers-abstract/source/: gpio_controller.c  i2c_controller.c  root.c
Drivers/drivers-core/: CMakeLists.txt
Drivers/drivers-core/include/: device.h
Drivers/drivers-core/source/: device.c
Drivers/drivers-esp/: CMakeLists.txt  devicetree.yaml
Drivers/drivers-esp/bindings/: espressif,esp32-gpio.yaml  espressif,esp32-i2c.yaml
Drivers/drivers-esp/source/: Esp32Gpio.cpp  Esp32I2c.cpp  esp32_gpio.c  esp32_i2c.c
Firmware/: CMakeLists.txt  Kconfig  idf_component.yml
Firmware/Source/: Main.cpp
Modules/hal-device/: CMakeLists.txt  README.md
Modules/hal-device-module/: CMakeLists.txt  README.md
Modules/hal-device-module/Source/: module.cpp
Modules/hal-device-module/source/: module.cpp
Modules/hal-device/Source/: module.cpp
Modules/lvgl-module/: CMakeLists.txt  README.md
Modules/lvgl-module/Assets/: .gitignore  generate-all.py
Modules/lvgl-module/Private/: lvgl_module_private.h
Modules/lvgl-module/Source/: lvgl_module.c  lvgl_module.cpp  module.c  symbols.c
Modules/lvgl-module/assets/: .gitignore  generate-all.py
Modules/lvgl-module/source/: lvgl_devices.c  lvgl_display.c  lvgl_fonts.c  lvgl_keyboard.c  lvgl_pointer.c  lvgl_ppa.c  module.c  symbols.c
Modules/lvgl-module/source-fonts/: material_symbols_launcher_30.c  material_symbols_launcher_36.c  material_symbols_launcher_42.c  material_symbols_launcher_48.c  material_symbols_launcher_64.c  material_symbols_launcher_72.c  material_symbols_shared_12.c  material_symbols_shared_16.c  material_symbols_shared_20.c  material_symbols_shared_24.c  material_symbols_shared_32.c  material_symbols_statusbar_12.c  material_symbols_statusbar_16.c  material_symbols_statusbar_20.c  material_symbols_statusbar_30.c
TactilityFreeRtos/: CMakeLists.txt
TactilityFreeRtos/Include/Tactility/: Dispatcher.h  DispatcherThread.h  EventGroup.h  Lock.h  MessageQueue.h  Mutex.h  PubSub.h  RecursiveMutex.h  Semaphore.h  Thread.h  Timer.h
TactilityKernel/: CMakeLists.txt  README.md  devicetree.yaml
TactilityKernel/Bindings/: gpio-controller.yaml  i2c-controller.yaml  i2c-device.yaml  i2s-controller.yaml  root.yaml  spi-controller.yaml
TactilityKernel/Include/Tactility/: Check.h  Delay.h  Device.h  Driver.h  Error.h  Time.h
TactilityKernel/Include/tactility/: check.h  defines.h  delay.h  device.h  driver.h  dts.h  error.h  kernel_init.h  log.h  module.h  time.h  timer.h
TactilityKernel/Source/: Crash.cpp  Device.cpp  Driver.cpp  Log.cpp  crash.cpp  device.cpp  driver.cpp  error.cpp  kernel_init.cpp  kernel_symbols.c  log.cpp  module.cpp  timer.c
TactilityKernel/Source/concurrent/: Dispatcher.cpp  EventGroup.cpp  dispatcher.cpp  event_group.cpp  thread.cpp  timer.c
TactilityKernel/Source/drivers/: GpioController.cpp  (+10 more)
TactilityKernel/bindings/: adc-controller.yaml  battery-sense.yaml  display-placeholder.yaml  gpio-backlight.yaml  gpio-hog.yaml  i2c-device.yaml  i8080-controller.yaml  pointer-placeholder.yaml  pwm-backlight.yaml  pwm.yaml  rgb-led-gpio.yaml  rgb-led-pwm.yaml  tactility,gpio-hog.yaml  touch-placeholder.yaml  uart-controller.yaml
TactilityKernel/source/: Bus.cpp  Device.cpp  Driver.cpp  Log.cpp  device.cpp  device_listener.cpp  error.cpp  kernel_init.cpp  kernel_symbols.c  module.cpp  paths.cpp  wifi_auto_scan.c
Tests/: CMakeLists.txt
Tests/HelloWorld/: manifest.properties  tactility.py
Tests/SdkIntegration/: CMakeLists.txt  manifest.properties
Tests/Tactility/: CMakeLists.txt  HalDeviceTest.cpp  Main.cpp  ObjectFileTest.cpp
Tests/TactilityCore/: CMakeLists.txt  Main.cpp
Tests/TactilityFreeRtos/: CMakeLists.txt  Main.cpp
Tests/TactilityKernel/: CMakeLists.txt  DeviceTest.cpp  DispatcherTest.cpp  DriverIntegrationTest.cpp  DriverTest.cpp  Main.cpp  ModuleTest.cpp  MutexTest.cpp  RecursiveMutexTest.cpp  ThreadTest.cpp  TimeAndDelay.cpp  TimerTest.cpp
Tests/crypt-module/: CMakeLists.txt
core/: CMakeLists.txt
core/bindings/: gpio-controller.yaml  i2c-controller.yaml  root.yaml
core/source/: Bus.cpp  Device.cpp  Driver.cpp  device.c  log.c
(+2066 files in other folders)
